--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@wagmi/cli": "^1.5.2",
+    "autoprefixer": "^10.4.16",
+    "cssnano": "^6.0.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.1",
     "eslint-config-prettier": "^9.0.0",
@@ -36,7 +38,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
     "typescript": "^5"
   }
