--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "wagmi": "wagmi generate"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.1",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
