Add token contract env variable

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@
 # -----------------------------------------------------------------------------
 
 export COMPOSE_PROJECT_NAME=cryptoswaphub-web
+
+# -----------------------------------------------------------------------------
+# Blockchain settings
+# -----------------------------------------------------------------------------
+
+# Here is our ERC20 token, which will be used to buy with network native cryptocurrency.
+TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
