--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      # NOTE: We must expose these args to Dockerfile because they are used in next.config.js
+      args:
+        - TOKEN_CONTRACT=${TOKEN_CONTRACT}
     env_file: .env
     stdin_open: true
     tty: true
