--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,9 @@
 # -----------------------------------------------------------------------------
 
 export COMPOSE_PROJECT_NAME=cryptoswaphub-test
+
+# -----------------------------------------------------------------------------
+# Blockchain settings
+# -----------------------------------------------------------------------------
+
+TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
