Extract chain ID into env variable

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,8 @@ export COMPOSE_PROJECT_NAME=cryptoswaphub-web
 # Blockchain settings
 # -----------------------------------------------------------------------------
 
+# Binance Smart Chain Testnet
+CHAIN_ID=97
+
 # Here is our ERC20 token, which will be used to buy with network native cryptocurrency.
 TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
