--- a/.env.test
+++ b/.env.test
@@ -8,4 +8,6 @@ export COMPOSE_PROJECT_NAME=cryptoswaphub-test
 # Blockchain settings
 # -----------------------------------------------------------------------------
 
+CHAIN_ID=97
+
 TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
