--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,6 +8,7 @@ services:
       # NOTE: We must expose these args to Dockerfile because they are used in next.config.js
       args:
         - TOKEN_CONTRACT=${TOKEN_CONTRACT}
+        - CHAIN_ID=${CHAIN_ID}
     env_file: .env
     stdin_open: true
     tty: true
