Add marketplace contract env variable

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ export COMPOSE_PROJECT_NAME=cryptoswaphub-web
 # Binance Smart Chain Testnet
 CHAIN_ID=97
 
-# Here is our ERC20 token, which will be used to buy with network native cryptocurrency.
+# Here is our marketplace contract, which will be used to buy ERC20 tokens
+MARKETPLACE_CONTRACT=0xfA0A68bD8Fd0E95F35237f28f1E905d62e719739
+
+# Here is our ERC20 token
 TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
