--- a/.env.test
+++ b/.env.test
@@ -10,4 +10,6 @@ export COMPOSE_PROJECT_NAME=cryptoswaphub-test
 
 CHAIN_ID=97
 
+MARKETPLACE_CONTRACT=0xfA0A68bD8Fd0E95F35237f28f1E905d62e719739
+
 TOKEN_CONTRACT=0xdfE7b9eE13ee744E4e695A6Da530908EC26167BE
