Add blockchain explorer URL env variable

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ export COMPOSE_PROJECT_NAME=cryptoswaphub-web
 # Binance Smart Chain Testnet
 CHAIN_ID=97
 
+# Blockchain explorer URL is used to build active links for the smart contracts or transactions
+BLOCKCHAIN_EXPLORER_URL=https://testnet.bscscan.com
+
 # Here is our marketplace contract, which will be used to buy ERC20 tokens
 MARKETPLACE_CONTRACT=0xfA0A68bD8Fd0E95F35237f28f1E905d62e719739
 
