--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,6 +8,7 @@ services:
       # NOTE: We must expose these args to Dockerfile because they are used in next.config.js
       args:
         - CHAIN_ID=${CHAIN_ID}
+        - BLOCKCHAIN_EXPLORER_URL=${BLOCKCHAIN_EXPLORER_URL}
         - MARKETPLACE_CONTRACT=${MARKETPLACE_CONTRACT}
         - TOKEN_CONTRACT=${TOKEN_CONTRACT}
     env_file: .env
